@@ -1,7 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.617 2006/03/09 04:16:17 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.618 2006/03/10 23:37:45 agaffney Exp $
+
+  10 Mar 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIStorageDevice.py:
+  raise an exception if the existing partitions are out of disk order
 
   8 Mar 2006; Preston Cody <codeman@gentoo.org>
   src/fe/dialog/gli-dialog and src/GLIGenDialog:
